[gd_scene load_steps=12 format=3 uid="uid://32bcolc5knef"]

[ext_resource type="Script" uid="uid://7ff76unwip4o" path="res://scenes/tv.gd" id="1_nqyhj"]
[ext_resource type="FontFile" uid="uid://de3jhormdk4qb" path="res://fonts/SpaceNova-6Rpd1.otf" id="2_0vvss"]
[ext_resource type="FontFile" uid="uid://cjog5sibib7b1" path="res://fonts/EdgeOfTheGalaxyRegular-OVEa6.otf" id="3_lnbu4"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lslse"]
frequency = 0.18

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nqyhj"]
width = 684
height = 426
noise = SubResource("FastNoiseLite_lslse")

[sub_resource type="Animation" id="Animation_nqyhj"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Noise:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.033)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Establishing Connection:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_0vvss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Noise:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Establishing Connection:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnbu4"]
_data = {
&"RESET": SubResource("Animation_0vvss"),
&"show": SubResource("Animation_nqyhj")
}

[sub_resource type="Animation" id="Animation_lnbu4"]
resource_name = "thinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Establishing Connection with Base", "Establishing Connection with Base.", "Establishing Connection with Base..", "Establishing Connection with Base..."]
}

[sub_resource type="Animation" id="Animation_ovwuf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Establishing Connection with Base"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ie1qu"]
_data = {
&"RESET": SubResource("Animation_ovwuf"),
&"thinking": SubResource("Animation_lnbu4")
}

[node name="TV" type="Node2D"]
script = ExtResource("1_nqyhj")

[node name="Border" type="ColorRect" parent="."]
offset_left = -362.0
offset_top = -223.0
offset_right = 350.72705
offset_bottom = 227.90918
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="."]
offset_left = -349.27295
offset_top = -212.09082
offset_right = 339.81836
offset_bottom = 217.0
color = Color(0.16924527, 0.1692453, 0.16924527, 1)

[node name="Noise" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
clip_children = 2
z_index = 1
position = Vector2(-4.499997, 2.4999814)
scale = Vector2(1.0073099, 1.0070423)
texture = SubResource("NoiseTexture2D_nqyhj")

[node name="Visibility Controller" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lnbu4")
}

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(-9, -7)

[node name="Establishing Connection" type="RichTextLabel" parent="."]
visible = false
offset_left = -331.0
offset_top = -37.0
offset_right = 325.0
offset_bottom = -7.0
theme_override_fonts/normal_font = ExtResource("2_0vvss")
theme_override_font_sizes/normal_font_size = 25
text = "Establishing Connection with Base"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Establishing Connection"]
libraries = {
&"": SubResource("AnimationLibrary_ie1qu")
}
autoplay = "thinking"
speed_scale = 0.5

[node name="Established" type="RichTextLabel" parent="."]
visible = false
offset_left = -333.0
offset_top = -163.0
offset_right = 330.0
offset_bottom = -120.0
theme_override_fonts/normal_font = ExtResource("2_0vvss")
theme_override_font_sizes/normal_font_size = 38
text = "Connection Established"

[node name="MessageLog" type="RichTextLabel" parent="."]
offset_left = -337.0
offset_top = -179.0
offset_right = 327.0
offset_bottom = 201.0
theme_override_fonts/normal_font = ExtResource("3_lnbu4")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 19
bbcode_enabled = true
visible_characters = 0
visible_ratio = 0.0

[node name="Popup" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -332.0
offset_top = 3.0
offset_right = 324.0
offset_bottom = 139.0
color = Color(0, 0, 0, 0.555)

[node name="Button" type="Button" parent="Popup"]
layout_mode = 0
offset_left = 6.0
offset_top = 10.0
offset_right = 215.0
offset_bottom = 125.0
theme_override_fonts/font = ExtResource("3_lnbu4")
theme_override_font_sizes/font_size = 60
text = "Choice 1"

[node name="Button2" type="Button" parent="Popup"]
layout_mode = 0
offset_left = 224.0
offset_top = 10.0
offset_right = 433.0
offset_bottom = 125.0
theme_override_fonts/font = ExtResource("3_lnbu4")
theme_override_font_sizes/font_size = 60
text = "Choice 2"

[node name="Button3" type="Button" parent="Popup"]
layout_mode = 0
offset_left = 440.0
offset_top = 10.0
offset_right = 649.0
offset_bottom = 125.0
theme_override_fonts/font = ExtResource("3_lnbu4")
theme_override_font_sizes/font_size = 60
text = "Choice 3"

[connection signal="pressed" from="Popup/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Popup/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Popup/Button3" to="." method="_on_button_3_pressed"]
